--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
     "better-sqlite3": "^9.4.3",
     "cors": "^2.8.5",
-    "ethers": "^6.15.0",
+    "ethers": "^6.16.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
